# cucount

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  tmp.out
cucount/: __init__.py  __jackknife__.py  correlations.py  types.py  utils.py
cucount/jax/: __init__.py
cucount/numpy/: __init__.py
examples/: __init__.py  angular_correlation_comparison.py  correlations.py
include/: common.h  count2.h  count3.h  count3close.h  cucount.h  define.h  mesh.h  utils.h
nb/: .gitignore  basic_examples_pp.ipynb  basic_examples_ss.ipynb
src/: common.cc  common.cu  count2.cu  count2.h  count3.cu  count3close.cu  cucount.cc  cucount.cu  cucount.h  define.h  ffi_cucount.cc  ffi_cucount.cu  logger.cc  logger.cu  mesh.cc  mesh.cu  mesh.h
tests/: angular_correlation_comparison.py  angular_correlation_comparison_with_errors.py  catalog_0.txt  catalog_1.txt  counts_gg.txt  counts_gs.txt  counts_ss.txt  nohup.out  test.py  test_pp.py  test_ppp.py  test_shear.py  treecorr_comparison.py
